kubernetes/apps/cilium/templates/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hubble
spec:
  parentRefs:
    - name: internal
      kind: Gateway
      namespace: gateway-system
      sectionName: https
  hostnames:
    - hubble.clerici.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
